welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:39: error: Int does not take parameters
      decalage=litMessage().toInt();
                                 ^