welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  
  var tab=new Array[Color](getMondeHauteur());
  var decalage=0;
  
  leveBrosse();
  
  for(i <- 0 to getMondeLargeur()-1)
  {
    for(j <- 0 to getMondeHauteur()-1)
    {
      if(i==0)
      {
        tab(j)=getCouleurSol();
      }else{
        setCouleurBrosse(tab((j+decalage)%tab.length));
      	baisseBrosse();
        leveBrosse();
      }
      
      if(j!=getMondeHauteur()-1){
       
        avance();
      
      }else{
        recule();
      }
    }
    if(i!= getMondeLargeur()-1)
    {
      recule();
      recule();
      recule();
      recule();
      recule();
      gauche();
      avance();
      droite();
      decalage=litMessage().toInt();
    }
  }
  
}